--- a/wachita/src/app/Components/principal/principal.component.css
+++ b/wachita/src/app/Components/principal/principal.component.css
@@ -10,5 +10,7 @@
     background-color: #1976d2;
     color: white;
     font-weight: 600;
+    justify-content: center;
+    text-align: center !important;
 
 }
