--- a/wachita/src/app/Components/principal/principal.component.html
+++ b/wachita/src/app/Components/principal/principal.component.html
@@ -7,6 +7,56 @@
 <br>
 <br>
 <div class="container">
+    <div class="card" style="width: 18rem;">
+        <img src="../../../assets/img/wacha.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h2 class="card-title">Registro</h2>
+          <p class="card-text">Aqui puedes registrar tu <strong>vaquita</strong> desde el momento que ingresa a tu corral</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Registro</li>
+          <li class="list-group-item">Traslado</li>
+          
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">Ingresar</a>
+          <a href="#" class="card-link">Retornar</a>
+        </div>
+        
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="../../../assets/img/nac_wacha.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h2 class="card-title">Seguimiento Nacimiento</h2>
+          <p class="card-text">Aqui puedes registrar el seguimiento de la vaca<strong> preñada</strong> desde el 1er mes hasta el parto</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Mes</li>
+          <li class="list-group-item">Alimentacion</li>
+          
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">Ingresar</a>
+          <a href="#" class="card-link">Retornar</a>
+        </div>
+        
+      </div>
 
-    
+      <div class="card" style="width: 18rem;">
+        <img src="../../../assets/img/inyecciones_vacuna.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h2 class="card-title">Seguimiento Vacunas</h2>
+          <p class="card-text">Aqui puedes hacer el seguimiento de la vacunas de tu ganado</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Vacunas</li>
+          <li class="list-group-item">Aislamiento</li>
+          
+        </ul>
+        <div class="card-body">
+          <a href="#" class="card-link">Ingresar</a>
+          <a href="#" class="card-link">Retornar</a>
+        </div>
+        
+      </div>
 </div>
