--- a/wachita/src/app/Components/principal/principal.component.html
+++ b/wachita/src/app/Components/principal/principal.component.html
@@ -5,8 +5,9 @@
 <br>
 <br>
 <br>
+<app-navbar></app-navbar>
 <br>
-<div class="container">
+<div class="container" mb-4>
     <div class="card" style="width: 18rem;">
         <img src="../../../assets/img/wacha.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -59,4 +60,8 @@
         </div>
         
       </div>
+      
 </div>
+<br>
+<br>
+
