--- a/wachita/src/app/Components/principal/principal.component.html
+++ b/wachita/src/app/Components/principal/principal.component.html
@@ -20,15 +20,15 @@
           
         </ul>
         <div class="card-body">
-          <a href="#" class="card-link">Ingresar</a>
-          <a href="#" class="card-link">Retornar</a>
+          <button type="button" class="btn btn-outline-primary mx-2">Ingresar</button>
+          <button type="button" class="btn btn-outline-info">Retornar</button>
         </div>
         
       </div>
       <div class="card" style="width: 18rem;">
         <img src="../../../assets/img/nac_wacha.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h2 class="card-title">Seguimiento Nacimiento</h2>
+          <h2 class="card-title">Maternidad</h2>
           <p class="card-text">Aqui puedes registrar el seguimiento de la vaca<strong> preñada</strong> desde el 1er mes hasta el parto</p>
         </div>
         <ul class="list-group list-group-flush">
@@ -37,8 +37,8 @@
           
         </ul>
         <div class="card-body">
-          <a href="#" class="card-link">Ingresar</a>
-          <a href="#" class="card-link">Retornar</a>
+            <button type="button" class="btn btn-outline-primary mx-2">Ingresar</button>
+            <button type="button" class="btn btn-outline-info">Retornar</button>
         </div>
         
       </div>
@@ -55,8 +55,8 @@
           
         </ul>
         <div class="card-body">
-          <a href="#" class="card-link">Ingresar</a>
-          <a href="#" class="card-link">Retornar</a>
+            <button type="button" class="btn btn-outline-primary mx-2">Ingresar</button>
+            <button type="button" class="btn btn-outline-info">Retornar</button>
         </div>
         
       </div>
