--- a/wachita/src/app/Components/navbar/navbar.component.html
+++ b/wachita/src/app/Components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
             <a class="nav-link"  routerLink="/agregarw">Registro</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/seguimienton">Seguimiento Nacimiento</a>
+            <a class="nav-link" routerLink="/seguimienton">Maternidad</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
