--- a/wachita/src/app/Components/principal/principal.component.html
+++ b/wachita/src/app/Components/principal/principal.component.html
@@ -20,7 +20,7 @@
           
         </ul>
         <div class="card-body">
-          <button type="button" class="btn btn-outline-primary mx-2">Ingresar</button>
+          <button type="button" class="btn btn-outline-primary mx-2" routerLink="/agregarw">Ingresar</button>
           <button type="button" class="btn btn-outline-info">Retornar</button>
         </div>
         
@@ -37,7 +37,7 @@
           
         </ul>
         <div class="card-body">
-            <button type="button" class="btn btn-outline-primary mx-2">Ingresar</button>
+            <button type="button" class="btn btn-outline-primary mx-2" routerLink="/agregarw">Ingresar</button>
             <button type="button" class="btn btn-outline-info">Retornar</button>
         </div>
         
@@ -55,7 +55,7 @@
           
         </ul>
         <div class="card-body">
-            <button type="button" class="btn btn-outline-primary mx-2">Ingresar</button>
+            <button type="button" class="btn btn-outline-primary mx-2" routerLink="/agregarw">Ingresar</button>
             <button type="button" class="btn btn-outline-info">Retornar</button>
         </div>
         
