--- a/wachita/src/app/Components/agregar-wachita/agregar-wachita.component.html
+++ b/wachita/src/app/Components/agregar-wachita/agregar-wachita.component.html
@@ -1,1 +1,11 @@
-<p>agregar-wachita works!</p>
+<div class="basic">
+    <h2> WACHITA</h2>
+</div>
+<br>
+<br>
+<br>
+
+<app-navbar></app-navbar>
+<div class="container">
+    
+</div>
