--- a/wachita/src/app/Components/seguimienton/seguimienton.component.html
+++ b/wachita/src/app/Components/seguimienton/seguimienton.component.html
@@ -1,1 +1,11 @@
-<p>seguimienton works!</p>
+<div class="basic">
+    <h2> WACHITA</h2>
+</div>
+<br>
+<br>
+<br>
+
+<app-navbar></app-navbar>
+<div class="container">
+    
+</div>
