--- a/wachita/src/app/Components/principal/principal.component.html
+++ b/wachita/src/app/Components/principal/principal.component.html
@@ -11,7 +11,7 @@
         <img src="../../../assets/img/wacha.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h2 class="card-title">Registro</h2>
-          <p class="card-text">Aqui puedes registrar tu <strong>vaquita</strong> desde el momento que ingresa a tu corral</p>
+          <p class="card-text">Registra aqui tu <strong>vaquita</strong> </p>
         </div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Registro</li>
@@ -28,7 +28,7 @@
         <img src="../../../assets/img/nac_wacha.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h2 class="card-title">Maternidad</h2>
-          <p class="card-text">Aqui puedes registrar el seguimiento de la vaca<strong> preñada</strong> desde el 1er mes hasta el parto</p>
+          <p class="card-text">Haz el seguimiento de la vaca<strong> preñada</strong></p>
         </div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Mes</li>
@@ -45,8 +45,8 @@
       <div class="card" style="width: 18rem;">
         <img src="../../../assets/img/inyecciones_vacuna.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h2 class="card-title">Seguimiento Vacunas</h2>
-          <p class="card-text">Aqui puedes hacer el seguimiento de la vacunas de tu ganado</p>
+          <h2 class="card-title">Control <strong>Wachita</strong> Sana</h2>
+          <p class="card-text">Registra de vacunas y otros medicamentos</p>
         </div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Vacunas</li>
