--- a/wachita/src/app/Components/agregar-wachita/agregar-wachita.component.html
+++ b/wachita/src/app/Components/agregar-wachita/agregar-wachita.component.html
@@ -6,3 +6,39 @@
 <br>
 
 <app-navbar></app-navbar>
+
+<div class="container">
+<mat-card class="card">
+<mat-card-subtitle mb-3> Datos de la vaca</mat-card-subtitle>
+<br>
+<br>
+<form>
+
+
+    <mat-grid-list cols="3" rowHeight="80px">
+        <mat-grid-tile>nombre</mat-grid-tile>
+        <mat-grid-tile>raza</mat-grid-tile>
+        <mat-grid-tile>padres</mat-grid-tile>
+        <mat-grid-tile>ubicacion</mat-grid-tile>
+        <mat-grid-tile>edada</mat-grid-tile>
+        <mat-grid-tile>edadm</mat-grid-tile>
+        <mat-grid-tile>dueno</mat-grid-tile>
+        <mat-grid-tile>marca</mat-grid-tile>
+        <mat-grid-tile>observacion</mat-grid-tile>
+        <mat-grid-tile>color</mat-grid-tile>
+        <mat-grid-tile>peso</mat-grid-tile>
+        <mat-grid-tile>Boton Aceptar / Volver</mat-grid-tile>
+
+      </mat-grid-list>
+
+
+
+</form>
+
+
+
+</mat-card>
+
+
+
+</div>
