--- a/wachita/src/app/Components/agregar-wachita/agregar-wachita.component.css
+++ b/wachita/src/app/Components/agregar-wachita/agregar-wachita.component.css
@@ -38,8 +38,16 @@
       }
 
       .card {
-        margin-top: 10px;
+        margin-top: 4px;
       }
       .mat-grid-tile {
-        background: lightblue;
+        background: #f5f5f5;
+      }
+      .mat-form-field {
+        width: 100%;
+        margin: 5px;
+      }
+      .btnregistar {
+
+        margin-right: 5px;
       }
