--- a/wachita/src/app/Components/agregar-wachita/agregar-wachita.component.html
+++ b/wachita/src/app/Components/agregar-wachita/agregar-wachita.component.html
@@ -8,36 +8,89 @@
 <app-navbar></app-navbar>
 
 <div class="container">
-<mat-card class="card">
-<mat-card-subtitle mb-3> Datos de la vaca</mat-card-subtitle>
-<br>
-<br>
-<form>
+    <mat-card class="card">
+        <mat-card-subtitle mb-3> Datos de la vaca</mat-card-subtitle>
+        <br>
+        <br>
+        <form>
 
 
-    <mat-grid-list cols="3" rowHeight="80px">
-        <mat-grid-tile>nombre</mat-grid-tile>
-        <mat-grid-tile>raza</mat-grid-tile>
-        <mat-grid-tile>padres</mat-grid-tile>
-        <mat-grid-tile>ubicacion</mat-grid-tile>
-        <mat-grid-tile>edada</mat-grid-tile>
-        <mat-grid-tile>edadm</mat-grid-tile>
-        <mat-grid-tile>dueno</mat-grid-tile>
-        <mat-grid-tile>marca</mat-grid-tile>
-        <mat-grid-tile>observacion</mat-grid-tile>
-        <mat-grid-tile>color</mat-grid-tile>
-        <mat-grid-tile>peso</mat-grid-tile>
-        <mat-grid-tile>Boton Aceptar / Volver</mat-grid-tile>
+            <mat-grid-list cols="3" rowHeight="80px">
+                <mat-grid-tile [colspan]="2">
+                    <mat-form-field appearance="fill" class="mat-form-field">
+                        <mat-label>Nombre</mat-label>
+                        <input autocomplete="off" matInput placeholder="Nombre">
+                    </mat-form-field>
+                </mat-grid-tile>
 
-      </mat-grid-list>
+                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                        <mat-label>Raza</mat-label>
+                        <input autocomplete="off" matInput placeholder="Raza">
+                    </mat-form-field>
+                </mat-grid-tile>
+                <mat-grid-tile [colspan]="2"> <mat-form-field appearance="fill" class="mat-form-field">
+                        <mat-label>Padres</mat-label>
+                        <input autocomplete="off" matInput placeholder="Padres">
+                    </mat-form-field>
+                </mat-grid-tile>
+                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                        <mat-label>Ubicacion</mat-label>
+                        <input autocomplete="off" matInput placeholder="Ubicacion">
+                    </mat-form-field></mat-grid-tile>
+                <mat-grid-tile [colspan]="2"> <mat-form-field appearance="fill" class="mat-form-field">
+                        <mat-label>Dueño</mat-label>
+                        <input autocomplete="off" matInput placeholder="dueno">
+                    </mat-form-field>
+                </mat-grid-tile>
+                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                    <mat-label>Edad Años</mat-label>
+                    <input autocomplete="off" matInput placeholder="Edad Años">
+                </mat-form-field>
+            </mat-grid-tile>
+                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                    <mat-label>Edad Meses</mat-label>
+                    <input autocomplete="off" matInput placeholder="Edad meses">
+                </mat-form-field>
+            </mat-grid-tile>
+                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                    <mat-label>Marca</mat-label>
+                    <input autocomplete="off" matInput placeholder="Marca">
+                </mat-form-field></mat-grid-tile>
+                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                    <mat-label>Observacion</mat-label>
+                    <input autocomplete="off" matInput placeholder="Observacion">
+                </mat-form-field>
+            </mat-grid-tile>
+                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                    <mat-label>Color</mat-label>
+                    <input autocomplete="off" matInput placeholder="Color">
+                </mat-form-field>
+            </mat-grid-tile>
+                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                    <mat-label>Peso</mat-label>
+                    <input autocomplete="off" matInput placeholder="Peso">
+                </mat-form-field>
+            </mat-grid-tile>
+                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                    <mat-label>Origen</mat-label>
+                    <input autocomplete="off" matInput placeholder="Origen">
+                </mat-form-field></mat-grid-tile>
+                <mat-grid-tile [colspan]="3">
+                    <button mat-raised-button color="primary" class="btnregistar">Registrar</button>
+                    <button mat-raised-button color="accent" routerLink="/principal">Volver</button>
+
+
+                </mat-grid-tile>
+
+            </mat-grid-list>
 
 
 
-</form>
+        </form>
 
 
 
-</mat-card>
+    </mat-card>
 
 
 
