--- a/wachita/src/app/Components/principal/principal.component.css
+++ b/wachita/src/app/Components/principal/principal.component.css
@@ -29,3 +29,15 @@
     margin-top: 5%;
     margin-right: 60px;
 }
+
+.card2{
+    margin: 3% 35%;
+    justify-content: center;
+    align-items: center;
+    }
+
+    
+.card3 {
+    
+    max-width: 700px;
+    }
