--- a/wachita/src/app/Components/mboard/mboard.component.html
+++ b/wachita/src/app/Components/mboard/mboard.component.html
@@ -1,5 +1,5 @@
-
-<div class="card mx-auto col-sm-6 mr-auto mt-5 mb-4" style="max-width: 100%;">
+<div class="menu">
+<div class="card mx-auto col-sm-6 mr-auto mt-5 mb-7" style="max-width: 100%;">
     <div class="card-header">
       <ul class="nav nav-pills card-header-pills">
         <li class="nav-item">
@@ -8,14 +8,15 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Comida</a>
         </li>
-        
-      </ul>
+              </ul>
     </div>
     <div class="card-body">
-      <h5 class="card-title2">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <h4 class="card-title2">Total</h4>
+      <p class="card-text">listado de vacas</p>
+      <app-listado-wachita></app-listado-wachita>
+      <a href="#" class="btn btn-primary">Ver Mas</a>
       <br>
       <br>
     </div>
   </div>
+</div>
