--- a/wachita/src/app/Components/mboard/mboard.component.html
+++ b/wachita/src/app/Components/mboard/mboard.component.html
@@ -11,9 +11,11 @@
               </ul>
     </div>
     <div class="card-body">
-      <h4 class="card-title2">Total</h4>
-      <p class="card-text">listado de vacas</p>
-      <app-listado-wachita></app-listado-wachita>
+      <h4 class="card-title2">DASHBOARD</h4>
+      <p class="card-text"><strong>listado de vacas</strong></p>
+      <app-dashboard></app-dashboard>
+      <br>
+      <br>
       <a href="#" class="btn btn-primary">Ver Mas</a>
       <br>
       <br>
