--- a/wachita/src/app/Components/mboard/mboard.component.html
+++ b/wachita/src/app/Components/mboard/mboard.component.html
@@ -11,7 +11,7 @@
               </ul>
     </div>
     <div class="card-body">
-      <h4 class="card-title2">DASHBOARD</h4>
+      <h4 class="card-title2"><strong>DASHBOARD</strong></h4>
       <p class="card-text"><strong>listado de vacas</strong></p>
       <app-dashboard></app-dashboard>
       <br>
