--- a/wachita/src/app/Components/mboard/mboard.component.html
+++ b/wachita/src/app/Components/mboard/mboard.component.html
@@ -16,7 +16,7 @@
       <app-dashboard></app-dashboard>
       <br>
       <br>
-      <a href="#" class="btn btn-primary">Ver Mas</a>
+      <a routerLink="/listarw" class="btn btn-primary">Ver Mas</a>
       <br>
       <br>
     </div>
