--- a/wachita/src/app/Components/listado-wachita/listado-wachita.component.html
+++ b/wachita/src/app/Components/listado-wachita/listado-wachita.component.html
@@ -81,7 +81,7 @@
       <th mat-header-cell *matHeaderCellDef >
         <button mat-raised-button color="primary" class="btnaceptar" routerLink="/agregarw">Registrar</button> </th>
       <td mat-cell *matCellDef="let element"> 
-        <mat-icon matTooltip="Ver" routerLink="/verusuarios/{{element.id}}" class="search" fontIcon="search"></mat-icon>
+        <mat-icon matTooltip="Ver" routerLink="/verwachita/{{element.id}}" class="search" fontIcon="search"></mat-icon>
         <mat-icon matTooltip="Editar" routerLink="/editarusuarios/1" class="edit"fontIcon="edit"></mat-icon>
         <mat-icon (click)="eliminarPersonal(element.id)"matTooltip="Borrar" class="delete" fontIcon="delete"></mat-icon>
       </td>
