--- a/wachita/src/app/Components/ver-wachita/ver-wachita.component.html
+++ b/wachita/src/app/Components/ver-wachita/ver-wachita.component.html
@@ -1,6 +1,10 @@
-<div class="title">
-    <H1>VER USUARIO</H1> 
+<div class="basic">
+    <h2> WACHITA</h2>
 </div>
+<br>
+<br>
+<br>
+<app-navbar></app-navbar>
 
 <div *ngIf="idWachita" class="container">
     
