--- a/wachita/src/app/Components/listado-wachita/listado-wachita.component.html
+++ b/wachita/src/app/Components/listado-wachita/listado-wachita.component.html
@@ -11,7 +11,7 @@
 <div class="container">
   <mat-form-field>
     <mat-label>Filtrar</mat-label>
-    <input matInput (keyup)="applyFilter($event)"  placeholder="Ex. apellido" #input autocomplete="off">
+    <input matInput (keyup)="applyFilter($event)"  placeholder="Ej.Raza" #input autocomplete="off">
   </mat-form-field>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z2" matSort>
 
