--- a/wachita/src/app/Components/mboard/mboard.component.html
+++ b/wachita/src/app/Components/mboard/mboard.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="card-body">
       <h4 class="card-title2"><strong>DASHBOARD</strong></h4>
-      <p class="card-text"><strong>listado de vacas</strong></p>
+      <p class="card-text"><strong>Resumen</strong></p>
       <app-dashboard></app-dashboard>
       <br>
       <br>
