--- a/wachita/src/app/Components/dashboard/dashboard.component.css
+++ b/wachita/src/app/Components/dashboard/dashboard.component.css
@@ -1,5 +1,10 @@
 .estilo {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   
+ 
+}
+.estilo .separador {
+  margin-right: 50px;
 }
