--- a/wachita/src/app/Components/principal/principal.component.html
+++ b/wachita/src/app/Components/principal/principal.component.html
@@ -45,7 +45,7 @@
         <img src="../../../assets/img/inyecciones_vacuna.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h2 class="card-title">Control <strong>Wachita</strong> Sana</h2>
-          <p class="card-text">Registra de vacunas y otros medicamentos</p>
+          <p class="card-text">Registro de vacunas y otros medicamentos</p>
         </div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Vacunas</li>
