--- a/wachita/src/app/Components/dashboard/dashboard.component.html
+++ b/wachita/src/app/Components/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="estilo">
-<img src ="../../../assets/img/vaca.ico" width="35px" height="35px"><h4>   {{ count }} <strong> Vacas</strong></h4>
+<img src ="../../../assets/img/vaca.ico" width="35px" height="35px" class="separador" ><h4>   {{ count }} <strong> Vacas</strong></h4>
 <br>
 <br>
+<img src ="../../../assets/img/vaca.ico" width="35px" height="35px" class="separador" ><h4>   {{ count }} <strong> Maternidad</strong></h4>
 </div>
