solucionado problema contador

--- a/wachita/src/app/Components/dashboard/dashboard.component.html
+++ b/wachita/src/app/Components/dashboard/dashboard.component.html
@@ -1,6 +1,2 @@
-<div class="estilo">
-<img src ="../../../assets/img/vaca.ico" width="35px" height="35px" class="separador" ><h4>   {{ count }} <strong> Vacas</strong></h4>
-<br>
-<br>
-<img src ="../../../assets/img/vaca.ico" width="35px" height="35px" class="separador"><h4>   {{ count }} <strong> Maternidad</strong></h4>
-</div>
+<div>Total de vacas: {{ vacasCount }}</div>
+<div>Total de vacas en maternidad: {{ maternidadCount.maternidad }}</div>
