--- a/wachita/src/app/Components/principal/principal.component.html
+++ b/wachita/src/app/Components/principal/principal.component.html
@@ -35,8 +35,8 @@
           
         </ul>
         <div class="card-body">
-            <button type="button" class="btn btn-outline-primary mx-2" routerLink="/agregarw">Ingresar</button>
-            <button type="button" class="btn btn-outline-info">Retornar</button>
+            <button type="button" class="btn btn-outline-primary mx-2" routerLink="/maternidad">Ingresar</button>
+            <button type="button" class="btn btn-outline-info" routerLink="">Retornar</button>
         </div>
         
       </div>
