--- a/wachita/src/app/Components/agregar-wachita/agregar-wachita.component.html
+++ b/wachita/src/app/Components/agregar-wachita/agregar-wachita.component.html
@@ -44,12 +44,38 @@
                 </mat-grid-tile>
                 <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
                     <mat-label>Edad Años</mat-label>
-                    <input type="number" formControlName="edada" autocomplete="off" matInput placeholder="Edad Años">
+                    <mat-select input formControlName="edada" autocomplete="off" matInput placeholder="Edad Años">
+                        <mat-option value="1">1</mat-option>
+                        <mat-option value="2">2</mat-option>
+                        <mat-option value="3">3</mat-option>
+                        <mat-option value="4">4</mat-option>
+                        <mat-option value="5">5</mat-option>
+                        <mat-option value="6">6</mat-option>
+                        <mat-option value="7">7</mat-option>
+                        <mat-option value="8">8</mat-option>
+                        <mat-option value="9">9</mat-option>
+                        <mat-option value="10">10</mat-option>
+                        <mat-option value="11">11</mat-option>
+                        <mat-option value="12">12</mat-option>
+                      </mat-select>
                 </mat-form-field>
             </mat-grid-tile>
                 <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
                     <mat-label>Edad Meses</mat-label>
-                    <input  type="number" formControlName="edadm" autocomplete="off" matInput placeholder="Edad meses">
+                    <mat-select input formControlName="edadm" autocomplete="off" matInput placeholder="Edad Meses">
+                        <mat-option value="1">1</mat-option>
+                        <mat-option value="2">2</mat-option>
+                        <mat-option value="3">3</mat-option>
+                        <mat-option value="4">4</mat-option>
+                        <mat-option value="5">5</mat-option>
+                        <mat-option value="6">6</mat-option>
+                        <mat-option value="7">7</mat-option>
+                        <mat-option value="8">8</mat-option>
+                        <mat-option value="9">9</mat-option>
+                        <mat-option value="10">10</mat-option>
+                        <mat-option value="11">11</mat-option>
+                        <mat-option value="12">12</mat-option>
+                      </mat-select>
                 </mat-form-field>
             </mat-grid-tile>
                 <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
