--- a/wachita/src/app/Components/dashboard/dashboard.component.html
+++ b/wachita/src/app/Components/dashboard/dashboard.component.html
@@ -1,2 +1,4 @@
-<div>Total de vacas: {{ vacasCount }}</div>
-<div>Total de vacas en maternidad: {{ maternidadCount.maternidad }}</div>
+<div class="vacas"><img src="../../../assets/img/vaca.ico" class="image"> Total de vacas: {{ vacasCount }}</div>
+<br>
+<br>
+<div class="maternidad"><img src="../../../assets/img/vaca_maternidad.ico" class="image"> Total de vacas en maternidad: {{ maternidadCount.maternidad }}</div>
