--- a/wachita/src/app/Components/ver-wachita/ver-wachita.component.html
+++ b/wachita/src/app/Components/ver-wachita/ver-wachita.component.html
@@ -18,9 +18,10 @@
                 <p><strong>Raza:</strong> {{idWachita.raza}} </p>
                 <p><strong>Edad Año:</strong> {{idWachita.edada}} </p>
                 <p><strong>Dueño:</strong> {{idWachita.dueno}} </p>
+                <p><strong>Observacion:</strong> {{idWachita.observacion}} </p>
             </mat-card-content>
             <mat-card-actions>
-                <button mat-flat-button color="primary" routerLink="/principal">Volver</button>
+                <button mat-flat-button color="primary" routerLink="/listarw">Volver</button>
             </mat-card-actions>
             
             </mat-card>
