--- a/wachita/src/app/Components/principal/principal.component.html
+++ b/wachita/src/app/Components/principal/principal.component.html
@@ -53,7 +53,7 @@
           
         </ul>
         <div class="card-body">
-            <button type="button" class="btn btn-outline-primary mx-2" routerLink="/agregarw">Ingresar</button>
+            <button type="button" class="btn btn-outline-primary mx-2" routerLink="/seguimienton">Ingresar</button>
             <button type="button" class="btn btn-outline-info">Retornar</button>
         </div>
         
