--- a/wachita/src/app/Components/agregar-wachita/agregar-wachita.component.html
+++ b/wachita/src/app/Components/agregar-wachita/agregar-wachita.component.html
@@ -45,6 +45,7 @@
                 <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
                     <mat-label>Edad Años</mat-label>
                     <mat-select input formControlName="edada" autocomplete="off" matInput placeholder="Edad Años">
+                        <mat-option value="1">0</mat-option>
                         <mat-option value="1">1</mat-option>
                         <mat-option value="2">2</mat-option>
                         <mat-option value="3">3</mat-option>
