--- a/wachita/src/app/Components/dashboard/dashboard.component.html
+++ b/wachita/src/app/Components/dashboard/dashboard.component.html
@@ -1,4 +1,7 @@
-<div class="vacas"><img src="../../../assets/img/vaca.ico" class="image"> Total de vacas: {{ vacasCount }}</div>
+<div class="vacas"><img src="../../../assets/img/vaca.ico" class="image"> Total de Vacas: {{ vacasCount }}</div>
 <br>
 <br>
-<div class="maternidad"><img src="../../../assets/img/vaca_maternidad.ico" class="image"> Total de vacas en maternidad: {{ maternidadCount.maternidad }}</div>
+<div class="maternidad"><img src="../../../assets/img/vaca_maternidad.ico" class="image"> Total de Vacas en maternidad: {{ maternidadCount.maternidad }}</div>
+<br>
+<br>
+<div class="maternidad"><img src="../../../assets/img/vaquita.ico" class="image"> Total de Vacas Nacidas: {{ nacidoCount }}</div>
