--- a/wachita/src/app/Components/navbar/navbar.component.html
+++ b/wachita/src/app/Components/navbar/navbar.component.html
@@ -26,6 +26,9 @@
               <li><a class="dropdown-item" href="#">Aislamiento</a></li>
             </ul>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/facturacion">Facturacion</a>
+          </li>
         </ul>
       </div>
     </div>
