--- a/wachita/src/app/Components/facturacion/facturacion.component.css
+++ b/wachita/src/app/Components/facturacion/facturacion.component.css
@@ -18,6 +18,7 @@
     margin: 0 20%;
     margin-top: 4%;
     
+    
     }
     .dropdown-menu {
         background-color: #fff;
@@ -39,15 +40,25 @@
 
       .card {
         margin-top: 4px;
+        color: aqua;
       }
       .mat-grid-tile {
-        background: #f5f5f5;
+        background: white;
       }
       .mat-form-field {
         width: 100%;
         margin: 5px;
+        color: #1976d2;
+        
       }
       .btnregistar {
 
         margin-right: 5px;
       }
+
+      .btnregistar {
+
+        margin-right: 5px;
+      }
+
+      
