--- a/wachita/src/app/Components/facturacion/facturacion.component.html
+++ b/wachita/src/app/Components/facturacion/facturacion.component.html
@@ -9,40 +9,40 @@
 
 <div class="container">
     <mat-card class="card">
-        <mat-card-subtitle mb-3> Datos de la vaca</mat-card-subtitle>
+        <mat-card-subtitle mb-3> Datos de la Facturacion</mat-card-subtitle>
         <br>
         <br>
         <form [formGroup]="form" (ngSubmit)="agregarwachita()">
 
 
-            <mat-grid-list cols="3" rowHeight="80px">
+            <mat-grid-list cols="3" rowHeight="80px" class="test">
                 <mat-grid-tile [colspan]="2">
-                    <mat-form-field appearance="fill" class="mat-form-field">
+                    <mat-form-field appearance="outline" class="mat-form-field" >
                         <mat-label>Nombre</mat-label>
-                        <input formControlName="nombre" autocomplete="off" matInput placeholder="Nombre">
+                        <input formControlName="nombre" autocomplete="off" matInput placeholder="Nombre" class="test">
                     </mat-form-field>
                 </mat-grid-tile>
 
-                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                <mat-grid-tile> <mat-form-field appearance="outline" class="mat-form-field">
                         <mat-label>Raza</mat-label>
                         <input formControlName="raza" autocomplete="off" matInput placeholder="Raza">
                     </mat-form-field>
                 </mat-grid-tile>
-                <mat-grid-tile [colspan]="2"> <mat-form-field appearance="fill" class="mat-form-field">
+                <mat-grid-tile [colspan]="2"> <mat-form-field appearance="outline" class="mat-form-field">
                         <mat-label>Padres</mat-label>
                         <input formControlName="padres" autocomplete="off" matInput placeholder="Padres">
                     </mat-form-field>
                 </mat-grid-tile>
-                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                <mat-grid-tile> <mat-form-field appearance="outline" class="mat-form-field">
                         <mat-label>Ubicacion</mat-label>
                         <input formControlName="ubicacion" autocomplete="off" matInput placeholder="Ubicacion">
                     </mat-form-field></mat-grid-tile>
-                <mat-grid-tile [colspan]="2"> <mat-form-field appearance="fill" class="mat-form-field">
+                <mat-grid-tile [colspan]="2"> <mat-form-field appearance="outline" class="mat-form-field">
                         <mat-label>Dueño</mat-label>
                         <input formControlName="dueno" autocomplete="off" matInput placeholder="dueno">
                     </mat-form-field>
                 </mat-grid-tile>
-                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                <mat-grid-tile> <mat-form-field appearance="outline" class="mat-form-field">
                     <mat-label>Edad Años</mat-label>
                     <mat-select input formControlName="edada" autocomplete="off" matInput placeholder="Edad Años">
                         <mat-option value="1">0</mat-option>
@@ -61,7 +61,7 @@
                       </mat-select>
                 </mat-form-field>
             </mat-grid-tile>
-                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                <mat-grid-tile> <mat-form-field appearance="outline" class="mat-form-field">
                     <mat-label>Edad Meses</mat-label>
                     <mat-select input formControlName="edadm" autocomplete="off" matInput placeholder="Edad Meses">
                         <mat-option value="1">1</mat-option>
@@ -79,11 +79,11 @@
                       </mat-select>
                 </mat-form-field>
             </mat-grid-tile>
-                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                <mat-grid-tile> <mat-form-field appearance="outline" class="mat-form-field">
                     <mat-label>Marca</mat-label>
                     <input formControlName="marca" autocomplete="off" matInput placeholder="Marca">
                 </mat-form-field></mat-grid-tile>
-                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                <mat-grid-tile> <mat-form-field appearance="outline" class="mat-form-field">
                     <mat-label>Observacion</mat-label>
                     <mat-select input formControlName="observacion" autocomplete="off" matInput placeholder="Observacion">
                         <mat-option value="Nacido">Nacido</mat-option>
@@ -94,17 +94,17 @@
                     
                 </mat-form-field>
             </mat-grid-tile>
-                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                <mat-grid-tile> <mat-form-field appearance="outline" class="mat-form-field">
                     <mat-label>Color</mat-label>
                     <input formControlName="color" autocomplete="off" matInput placeholder="Color">
                 </mat-form-field>
             </mat-grid-tile>
-                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                <mat-grid-tile> <mat-form-field appearance="outline" class="mat-form-field">
                     <mat-label>Peso</mat-label>
                     <input type="number" formControlName="peso" autocomplete="off" matInput placeholder="Peso">
                 </mat-form-field>
             </mat-grid-tile>
-                <mat-grid-tile> <mat-form-field appearance="fill" class="mat-form-field">
+                <mat-grid-tile> <mat-form-field appearance="outline" class="mat-form-field">
                     <mat-label>Origen</mat-label>
                     <input formControlName="origen" autocomplete="off" matInput placeholder="Origen">
                 </mat-form-field></mat-grid-tile>
