--- a/wachita/src/app/Components/principal/principal.component.html
+++ b/wachita/src/app/Components/principal/principal.component.html
@@ -1,5 +1,5 @@
-<div class="basic">
-    <h2> WACHITA</h2>
+<div class="basic" style="position: relative;">
+  <img [src]="imagenUrl" [ngStyle]="{'width': '50px', 'position': 'absolute', 'left': '0'}">    <h2 tyle="margin-left: 40px;"> WACHITA</h2>
 </div>
 <br>
 <br>
